website/versioned_docs/version-0.13/api/interfaces/DataSource.md
# Interface: DataSource

Defined in: [src/types.ts:37](https://github.com/freshguard-dev/freshguard-core/blob/0f06ee7d1e37deed839d08ac5735856e04c99efa/src/types.ts#L37)

Data source configuration

## Properties

### createdAt

> **createdAt**: `Date`

Defined in: [src/types.ts:48](https://github.com/freshguard-dev/freshguard-core/blob/0f06ee7d1e37deed839d08ac5735856e04c99efa/src/types.ts#L48)

***

### credentials

> **credentials**: [`SourceCredentials`](SourceCredentials.md)

Defined in: [src/types.ts:41](https://github.com/freshguard-dev/freshguard-core/blob/0f06ee7d1e37deed839d08ac5735856e04c99efa/src/types.ts#L41)

***

### estimatedSizeBytes?

> `optional` **estimatedSizeBytes**: `number`

Defined in: [src/types.ts:47](https://github.com/freshguard-dev/freshguard-core/blob/0f06ee7d1e37deed839d08ac5735856e04c99efa/src/types.ts#L47)

***

### id

> **id**: `string`

Defined in: [src/types.ts:38](https://github.com/freshguard-dev/freshguard-core/blob/0f06ee7d1e37deed839d08ac5735856e04c99efa/src/types.ts#L38)

***

### isActive

> **isActive**: `boolean`

Defined in: [src/types.ts:42](https://github.com/freshguard-dev/freshguard-core/blob/0f06ee7d1e37deed839d08ac5735856e04c99efa/src/types.ts#L42)

***

### lastError?

> `optional` **lastError**: `string`

Defined in: [src/types.ts:45](https://github.com/freshguard-dev/freshguard-core/blob/0f06ee7d1e37deed839d08ac5735856e04c99efa/src/types.ts#L45)

***

### lastTestedAt?

> `optional` **lastTestedAt**: `Date`

Defined in: [src/types.ts:43](https://github.com/freshguard-dev/freshguard-core/blob/0f06ee7d1e37deed839d08ac5735856e04c99efa/src/types.ts#L43)

***

### lastTestSuccess?

> `optional` **lastTestSuccess**: `boolean`

Defined in: [src/types.ts:44](https://github.com/freshguard-dev/freshguard-core/blob/0f06ee7d1e37deed839d08ac5735856e04c99efa/src/types.ts#L44)

***

### name

> **name**: `string`

Defined in: [src/types.ts:39](https://github.com/freshguard-dev/freshguard-core/blob/0f06ee7d1e37deed839d08ac5735856e04c99efa/src/types.ts#L39)

***

### tableCount?

> `optional` **tableCount**: `number`

Defined in: [src/types.ts:46](https://github.com/freshguard-dev/freshguard-core/blob/0f06ee7d1e37deed839d08ac5735856e04c99efa/src/types.ts#L46)

***

### type

> **type**: [`DataSourceType`](../type-aliases/DataSourceType.md)

Defined in: [src/types.ts:40](https://github.com/freshguard-dev/freshguard-core/blob/0f06ee7d1e37deed839d08ac5735856e04c99efa/src/types.ts#L40)

***

### updatedAt

> **updatedAt**: `Date`

Defined in: [src/types.ts:49](https://github.com/freshguard-dev/freshguard-core/blob/0f06ee7d1e37deed839d08ac5735856e04c99efa/src/types.ts#L49)
